# jse

./: .coveragerc  .gitignore  .travis.yml  Pipfile  README.md  codecov.yml  example.json  jse.py  publish.yml  pyproject.toml  run.py  setup.py  test_integration.py  test_jse.py  test_unit.py
.github/scipts/: check-version.sh
.github/workflows/: publish.yml  test.yml
jse/: __main__.py  bash.py  editor.py  entry.py  jse.py
tests/: arglist.py  test_bash_expansion.py  test_integration.py  test_parse_value.py  test_query.py  test_unit.py
