[tool.poetry]
name = "jse"
version = "0.0.5"
description = "Quickly edit json files from the command line"
authors = ["Brian Jubelirer <brian2386@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bjubes/jse"
classifiers = [
    "Topic :: Software Development",
    "Topic :: Text Processing",
    "Topic :: Utilities"

]

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
jse = 'jse.entry:main'